1. [DI example] Add additional Dao implementation and control it through context configuration